Created Edge and Vertex Classes, developed file readefunction and sub servicesr

--- a/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj
+++ b/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj
@@ -147,7 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Edge.cpp" />
     <ClCompile Include="EdgeWeightedDigraph.cpp" />
+    <ClCompile Include="Vertex.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Edge.h" />
+    <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
