--- a/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj.filters
+++ b/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="EdgeWeightedDigraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Vertex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Edge.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Vertex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Edge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
