--- a/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj
+++ b/EdgeWeightedDigraph/EdgeWeightedDigraph.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="Edge.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="tinyEWG.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
